# open-data-monitoring

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  REFACTORING_NOTES.md  deploy.sh  docker-compose.yaml  project-context.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.agent/workflows/: bmad-refactor.md  debug-dataset.md  migrate-storage.md  pre-commit-check.md  run-tests.md
.agents/: project-context.md
.agents/rules/: repo.md
.contributing/: ARCHITECTURE.md  FRONTEND_GUIDE.md  GLOSSARY.md  ONBOARDING.md
db/: 2025-10-25-patch-1.sql  2026-02-06-add-is-slug-valid.sql  init.sql  views.sql
db/migrations/: 2025-06-27.sql
db/patchs/: 2025-10-25-patch-1.sql  2025-10-27-patch-1.sql  2026-02-09-handle-dataset-blob-and-versions.sql  2026-02-10-cleanup-orphans.sql  2026-02-11-add-dataset-linking.sql  2026-03-02-add-syntax-change-score.sql  2026-03-04-add-users-table.sql  2026-03-05-add-direction-health-stats.sql  2026-03-05-add-normalized-datasets-view.sql  2026-03-05-add-versions-kpi-index.sql  2026-03-09-update-normalized-datasets-view.sql  2026-03-10-add-direction-health-stats-view.sql  2026-03-10-materialize-direction-health.sql  2026-03-11-add-health-metrics.sql  20260317_add_deleted_at_to_datasets.sql  20260317_drop_snapshot_column.sql
deploy/nginx/: Dockerfile  nginx.conf
deployment/: generate_service.sh  nginx.conf.template  odm-api.service.template  pgpass.example  rollback_strategies.md
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/quality/: OLLAMA_SETUP.md  OPENAI_SETUP.md  README.md  charter_opendata.md  dcat_reference.md  health_scores.md
front/: .env.sample  .gitignore  .prettierrc  index.html  package.json  run_front.sh  tsconfig.json  vite.config.ts  vitest.config.ts
front/server/: index.mjs  package.json
front/src/: main.tsx
scripts/: migrate_blobs.py  restore_db_from_prod.sh  stats.py  sync.sh  verify_migration.py
src/: __init__.py  common.py  exceptions.py  logger.py  run_api.py  settings.py
src/application/: commands.py  handlers.py  projections.py  services.py  usecases.py
src/domain/: aggregate.py  ports.py  unit_of_work.py
src/infrastructure/: adapters.py  factory.py  unit_of_work.py
src/interfaces/: cli.py  cli_impact.py  (+1 more)
stats/: README.md  compute-mbis.sql  config.json.sample  datasets-as-tests.sql  delta-7-days.sql  dump-versions-history.sql  export-mbis.sql  growth-and-impact-monthly.sql  impact-trends-weekly.sql  no-publisher.sql  push_stats.py  quality-audit.sql  run-stats.sh
tests/: conftest.py  test_api.py  test_api_contract.py  test_auth_api.py  test_datagouv_adapter.py  test_dataset_lifecycle.py  test_dataset_linking.py  test_datasets.py  test_domain.py  test_handlers_robustness.py  test_health_score_exclusion.py  test_llm_validation.py  test_platform.py  test_postgresql.py  test_quality_robustness.py  test_reporting_service.py  test_reverse_linking.py  test_stats_pipeline.py  test_storage_optimization.py  test_unit_of_work.py  test_upsert_robustness.py  test_use_cases_robustness.py
utils/: backfill_health.py  bulk_llm_audit.py  cleanup_today.py  migrate.sh  restore_db.sh  tasks.py
(+133 files in other folders)
