[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = [
    "src/",
]
[tool.coverage.run]
omit = [
    "*/**/__init__.py",
    "migrations/*",
    "setup.py",
    "tmp.py"
]
[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]