[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = [
    "src/",
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals --capture=fd --tb=short --maxfail=1 -v"
testpaths = ["tests"]
pythonpath = "src"
norecursedirs = ["venv", "dev"]

[tool.flake8]
ignore = ["D203", "W291"]
max-line-length = 120
exclude = [
    ".git",
    "migrations",
    "__pycache__",
    "setup.py"
]
max-complexity = 10

[tool.coverage.run]
omit = [
    "*/**/__init__.py",
    "migrations/*",
    "setup.py",
    "tmp.py"
]
[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/"]